Nonlinear coefficients for dipoles and quads

--- a/Config/velaINJMagnets.config
+++ b/Config/velaINJMagnets.config
@@ -472,7 +472,7 @@ NAME = QUAD01;
 POSITION = 1.352;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M08;
-FIELD_INTEGRAL_COEFFICIENTS =   0.104277992372682, 0.0025482705782263;
+FIELD_INTEGRAL_COEFFICIENTS = -3.04115792675565E-05, 0.000408686482135776, 0.103241242070669, 0.00125577133254764;
 MAGNETIC_LENGTH = 125.368867474869;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-01:;
@@ -488,7 +488,7 @@ NAME = QUAD02;
 POSITION = 1.493;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M04;
-FIELD_INTEGRAL_COEFFICIENTS = 0.104135447175047,  0.00237250194124666;
+FIELD_INTEGRAL_COEFFICIENTS = -2.41987944118493E-05, 0.000313311377264068, 0.103496259204809, 0.000993229345279812;
 MAGNETIC_LENGTH = 125.145131747801;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-02:;
@@ -504,7 +504,7 @@ NAME = QUAD03;
 POSITION = 1.662;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M07;
-FIELD_INTEGRAL_COEFFICIENTS = 0.10423548260287, 0.00257735827842411;
+FIELD_INTEGRAL_COEFFICIENTS = -3.42110684486398E-05, 0.000456192955935329, 0.10312655249584, 0.00113654928965265;
 MAGNETIC_LENGTH = 125.337920371927;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-03:;
@@ -520,7 +520,7 @@ NAME = QUAD04;
 POSITION = 1.831;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M09;
-FIELD_INTEGRAL_COEFFICIENTS = 0.104228631153691, 0.00236407828336409;
+FIELD_INTEGRAL_COEFFICIENTS = -2.90597004390234E-05, 0.000383461236009496, 0.103347527900997, 0.00116335086609974;
 MAGNETIC_LENGTH = 125.244281671835;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-04:;
@@ -536,7 +536,7 @@ NAME = QUAD05;
 POSITION = 4.845;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M05;
-FIELD_INTEGRAL_COEFFICIENTS = 0.104257662272452, 0.00260277456365575;
+FIELD_INTEGRAL_COEFFICIENTS = -2.28625597225573E-05, 0.000310696398249702, 0.103519837397042, 0.00104459623600727;
 MAGNETIC_LENGTH = 125.223958037202;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-05:;
@@ -552,7 +552,7 @@ NAME = QUAD06;
 POSITION = 5.099;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M02;
-FIELD_INTEGRAL_COEFFICIENTS = 0.104277150901771, 0.00276894282540757;
+FIELD_INTEGRAL_COEFFICIENTS = -3.77887463072432E-05, 0.000518011967842953, 0.102826208113528, 0.00197957472695541;
 MAGNETIC_LENGTH = 125.033079276906;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-06:;
@@ -570,7 +570,7 @@ NAME = QUAD07;
 POSITION = 7.380;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M03;
-FIELD_INTEGRAL_COEFFICIENTS = 0.102760380363229, 0.0025714442257629;
+FIELD_INTEGRAL_COEFFICIENTS = -1.51802828278694E-05, 0.000208236492203741, 0.102224127676636, 0.00205656183129602;
 MAGNETIC_LENGTH = 125.299909233924;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-07:;
@@ -586,7 +586,7 @@ NAME = QUAD08;
 POSITION = 7.577;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M01;
-FIELD_INTEGRAL_COEFFICIENTS = 0.102891849667145, 0.00267552683439267;
+FIELD_INTEGRAL_COEFFICIENTS = -3.06357099595939E-05, 0.000442533546326552, 0.101577009522434, 0.00146589509380893;
 MAGNETIC_LENGTH = 125.27558356645;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-08:;
@@ -666,7 +666,7 @@ NAME = QUAD13;
 POSITION = 19.155;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M06;
-FIELD_INTEGRAL_COEFFICIENTS = 0.104257662272452, 0.0025714442257629;
+FIELD_INTEGRAL_COEFFICIENTS = -2.87186700627592E-05, 0.000391071197622624, 0.103186587329201, 0.00109631338038853;
 MAGNETIC_LENGTH = 125.299909233924;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-13:;
@@ -719,7 +719,7 @@ NAME = DIP01;
 POSITION = 3.944;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFDIM02;
-FIELD_INTEGRAL_COEFFICIENTS = 8.026730731, 0.001661992;
+FIELD_INTEGRAL_COEFFICIENTS = -0.001052242, 0.021129402, 7.92076905, 0.072610365;
 MAGNETIC_LENGTH = 414.229; For dipoles, the magnetic length is defined along the nominal arc length.
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-DIP-01:;
@@ -739,7 +739,7 @@ NAME = DIP02;
 POSITION = 16.169;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFDIM01;
-FIELD_INTEGRAL_COEFFICIENTS = 8.055827986, -0.175638903;
+FIELD_INTEGRAL_COEFFICIENTS = -0.00038343, 0.002868828, 8.075456266, -0.299379231;
 MAGNETIC_LENGTH = 413.824;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-DIP-02:;
@@ -757,7 +757,7 @@ NAME = DIP03;
 POSITION = 17.859;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFDIM03;
-FIELD_INTEGRAL_COEFFICIENTS = 8.045688429, 0.03831204;
+FIELD_INTEGRAL_COEFFICIENTS = -0.002065291, 0.037340159, 7.863201936, 0.211661623;
 MAGNETIC_LENGTH = 414.409;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-DIP-03:;
