Added branch info
For branches starting at DIP01 and DIP02

--- a/Config/velaINJMagnets.config
+++ b/Config/velaINJMagnets.config
@@ -68,8 +68,6 @@ MANUFACTURER = SEF;
 SERIAL_NUMBER = 02;
 POSITION = 0.197;
 FIELD_INTEGRAL_COEFFICIENTS = 0.00120539455199735,0.00103087438201299; polynomal expansion of field integral vs current where field_integral = a0*current^3 + a1*current^2 + a2*current + a3
-MEASUREMENT_DATA_LOCATION = "your momma"; FIXME Too
-MAGNET_BRANCH = "right near the start" ; and FIXME  
 PV_ROOT = EBT-INJ-MAG-SOL-01:;
 MAG_TYPE = SOL;
 MAG_REV_TYPE = NR;
@@ -156,6 +154,7 @@ MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR05;
 POSITION = 4.648;
+MAGNET_BRANCH = DIP01;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0001;
 FIELD_INTEGRAL_COEFFICIENTS = 0.103007246376812, 0.0;
@@ -241,6 +240,7 @@ MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR10;
 POSITION = 16.732;
+MAGNET_BRANCH = DIP02;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0009;
 MAGNETIC_LENGTH = 182.966531440162;
@@ -258,6 +258,7 @@ MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR11;
 POSITION = 18.958;
+MAGNET_BRANCH = DIP02;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0007;
 FIELD_INTEGRAL_COEFFICIENTS = 0.109396135, 0.0;
@@ -347,6 +348,7 @@ MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = VCOR05;
 POSITION = 4.648;
+MAGNET_BRANCH = DIP01;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0001;
 FIELD_INTEGRAL_COEFFICIENTS = 0.103007246376812, 0.0;
@@ -432,6 +434,7 @@ MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = VCOR10;
 POSITION = 16.732;
+MAGNET_BRANCH = DIP02;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0009;
 FIELD_INTEGRAL_COEFFICIENTS =  0.108940217, 0.0;
@@ -449,6 +452,7 @@ MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = VCOR11;
 POSITION = 18.958;
+MAGNET_BRANCH = DIP02;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0007;
 FIELD_INTEGRAL_COEFFICIENTS =  0.109396135, 0.0;
@@ -536,6 +540,7 @@ MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD05;
 POSITION = 4.845;
+MAGNET_BRANCH = DIP01;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M05;
 FIELD_INTEGRAL_COEFFICIENTS = -2.28625597225573E-05, 0.000310696398249702, 0.103519837397042, 0.00104459623600727;
@@ -552,6 +557,7 @@ MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD06;
 POSITION = 5.099;
+MAGNET_BRANCH = DIP01;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M02;
 FIELD_INTEGRAL_COEFFICIENTS = -3.77887463072432E-05, 0.000518011967842953, 0.102826208113528, 0.00197957472695541;
@@ -651,6 +657,7 @@ MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD12;
 POSITION = 17.042;
+MAGNET_BRANCH = DIP02;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EMIQM04;
 FIELD_INTEGRAL_COEFFICIENTS = 1.58996386665694, 6.76912235527686E-05;
@@ -666,6 +673,7 @@ MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD13;
 POSITION = 19.155;
+MAGNET_BRANCH = DIP02;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M06;
 FIELD_INTEGRAL_COEFFICIENTS = -2.87186700627592E-05, 0.000391071197622624, 0.103186587329201, 0.00109631338038853;
@@ -682,6 +690,7 @@ MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD14;
 POSITION = 19.634;
+MAGNET_BRANCH = DIP02;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EMIQM05;
 FIELD_INTEGRAL_COEFFICIENTS = 1.59235070995081, -0.022877181714572;
@@ -719,6 +728,7 @@ MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = DIP01;
 POSITION = 3.944;
+MAGNET_BRANCH = DIP01;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFDIM02;
 FIELD_INTEGRAL_COEFFICIENTS = -0.001052242, 0.021129402, 7.92076905, 0.072610365;
@@ -739,6 +749,7 @@ NUMBER_OF_ILOCKS  = 8;
 
 NAME = DIP02;
 POSITION = 16.169;
+MAGNET_BRANCH = DIP02;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFDIM01;
 FIELD_INTEGRAL_COEFFICIENTS = -0.00038343, 0.002868828, 8.075456266, -0.299379231;
@@ -757,6 +768,7 @@ NUMBER_OF_ILOCKS  = 6;
 
 NAME = DIP03;
 POSITION = 17.859;
+MAGNET_BRANCH = DIP02;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFDIM03;
 FIELD_INTEGRAL_COEFFICIENTS = -0.002065291, 0.037340159, 7.863201936, 0.211661623;
