Update CLARA config files
Change SLOPE and INTERCEPT to FIELD_INTEGRAL_COEFFICIENTS in CLARA
config files. Quotes around paths.

--- a/Config/claraINJMagnets.config
+++ b/Config/claraINJMagnets.config
@@ -115,8 +115,7 @@ NAME = HCOR01;
 POSITION = 0.35482; From here on in the positions are taken from PHW's layout CSV (CLA-EBT_V10_layout.csv)
 MANUFACTURER = Danfysik;
 SERIAL_NUMBER = 13258;
-SLOPE = 0.023624156190865;
-INTERCEPT = 0.00354362342862975;
+FIELD_INTEGRAL_COEFFICIENTS = 0.023624156190865, 0.00354362342862975;
 MAGNETIC_LENGTH = 131.245312171472;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors;
 PV_ROOT = CLA-S01-MAG-HCOR-01:;
@@ -133,8 +132,7 @@ NAME = HCOR02;
 POSITION = 0.9377;
 MANUFACTURER = Danfysik;
 SERIAL_NUMBER = 13259;
-SLOPE = 0.0234042553191489;
-INTERCEPT = 0;
+FIELD_INTEGRAL_COEFFICIENTS = 0.0234042553191489, 0.0;
 MAGNETIC_LENGTH = 125;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors;
 PV_ROOT = CLA-S01-MAG-HCOR-02:;
@@ -156,8 +154,7 @@ NAME = VCOR01;
 POSITION = 0.35482; From here on in the positions are taken from PHW's layout CSV (CLA-EBT_V10_layout.csv)
 MANUFACTURER = Danfysik;
 SERIAL_NUMBER = 13258;
-SLOPE = 0.0231571709981465;
-INTERCEPT = 0.00347357564972197;
+FIELD_INTEGRAL_COEFFICIENTS = 0.0231571709981465, 0.00347357564972197;
 MAGNETIC_LENGTH = 128.650949989703;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors;
 PV_ROOT = CLA-S01-MAG-VCOR-01:;
@@ -174,8 +171,7 @@ NAME = VCOR02;
 POSITION = 0.9377;
 MANUFACTURER = Danfysik;
 SERIAL_NUMBER = 13259;
-SLOPE = 0.0234042553191489;
-INTERCEPT = 0;
+FIELD_INTEGRAL_COEFFICIENTS = 0.0234042553191489, 0.0;
 MAGNETIC_LENGTH = 125;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors;
 PV_ROOT = CLA-S01-MAG-VCOR-02:;
