--- a/Python Modules/bpms/bpms.cbp
+++ b/Python Modules/bpms/bpms.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="ms_visual_c_2012" />
 		<Build>
 			<Target title="Debug">
-				<Option output="../../bin/Debug/VELA_CLARA_BPM_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/VELA_CLARA_BPM_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
@@ -37,7 +37,7 @@
 				</ExtraCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="../../bin/Release/VELA_CLARA_BPM_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/VELA_CLARA_BPM_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
