Added field integral coefficients for SOL and BSOL
Translates to Larmor angle for SOL and field at cathode for BSOL

--- a/Config/velaINJMagnets.config
+++ b/Config/velaINJMagnets.config
@@ -50,7 +50,12 @@ NUMBER_OF_ILOCKS  = 0;  Most have 6 or 8 (but not the BSOL). Redefine before the
 NAME = BSOL;
 POSITION = 0.000; longitudinal position along the lattice (in metres) - used to define magnet order
 MANUFACTURER = Danfysik;
-FIELD_INTEGRAL_COEFFICIENTS = 1.0, 0.0; FIXME: change these to something more sensible!
+
+As with the SOL, these FICs work a little differently. The field at the cathode is calculated using
+B_cath = coeff . [y, y², y³, x, xy, xy², x², x²y, x²y², x²y³, x³, x³y]
+where x is the BC current and y is the solenoid current
+FIELD_INTEGRAL_COEFFICIENTS = 0.000449207, -1.07199E-07, 1.31132E-10, -0.029521811, -4.34196E-06, 1.8541E-08, 0.001654436, -1.89555E-06, -7.20952E-10, -1.51066E-12, -2.68258E-05, 1.648E-07;
+
 PV_ROOT = EBT-INJ-MAG-BSOL-01:  ;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = BSOL;
@@ -67,7 +72,12 @@ NAME = SOL;
 MANUFACTURER = SEF;
 SERIAL_NUMBER = 02;
 POSITION = 0.197;
-FIELD_INTEGRAL_COEFFICIENTS = 0.00120539455199735,0.00103087438201299; polynomal expansion of field integral vs current where field_integral = a0*current^3 + a1*current^2 + a2*current + a3
+
+The field integral coefficients work a little differently here. The Larmor angle is calculated using
+theta_L = coeff . [1, p, I, p*I, p**2] where p is the momentum and I is the solenoid current
+These coefficients have been calculated using the rf_sol_tracking code and the calc-larmor-angle-coeffs.py script.
+FIELD_INTEGRAL_COEFFICIENTS =   1.04285048e+02,  -4.32881185e+01,   9.24829558e-01,       -8.90716383e-02,   4.26526273e+00;
+
 PV_ROOT = EBT-INJ-MAG-SOL-01:;
 MAG_TYPE = SOL;
 MAG_REV_TYPE = NR;
@@ -88,6 +98,8 @@ NAME = HCOR01;
 POSITION = 0.394;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0002;
+
+Polynomal expansion of field integral vs current where field_integral = a0*current^3 + a1*current^2 + a2*current + a3
 FIELD_INTEGRAL_COEFFICIENTS = 0.0989613526570049,0.0;
 MAGNETIC_LENGTH = 176.594827586207;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
@@ -711,7 +723,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EMDQM08;
 FIELD_INTEGRAL_COEFFICIENTS = 0.111954754, -0.001381788;
 MAGNETIC_LENGTH = 70.4236023746139;
-MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Diagnostic Line Magnets\Measurements;
+MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Diagnostic Line Magnets\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-15:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
