--- a/Python Modules/vacvalves/vacvalves.cbp
+++ b/Python Modules/vacvalves/vacvalves.cbp
@@ -36,7 +36,7 @@
 				</ExtraCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/VELA_CLARA_Vac_Valve_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Software\VELA_CLARA_PYDs\bin\stage\VELA_CLARA_Vac_Valve_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
