--- a/Python Modules/magnets/magnetPYD.cbp
+++ b/Python Modules/magnets/magnetPYD.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="ms_visual_c_2012" />
 		<Build>
 			<Target title="Debug">
-				<Option output="\\fed.cclrc.ac.uk\org\NLab\ASTeC\Projects\VELA\Software\VELA_CLARA_PYDs\bin\Debug\VELA_CLARA_MagnetControl" prefix_auto="1" extension_auto="1" />
+				<Option output="\\fed.cclrc.ac.uk\org\NLab\ASTeC\Projects\VELA\Software\VELA_CLARA_PYDs\bin\Debug\CLARA_MagnetControl" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
@@ -20,6 +20,20 @@
 					<Add option="/D_DEBUG" />
 					<Add option="/MDd" />
 					<Add directory="include" />
+					<Add directory="../../Hardware" />
+					<Add directory="../../Utilities" />
+					<Add directory="../../Structs" />
+					<Add directory="../../Config" />
+					<Add directory="../../Hardware/magnet" />
+					<Add directory="../../Hardware/screen" />
+					<Add directory="../../Hardware/scope" />
+					<Add directory="../../Hardware/gun_prot" />
+					<Add directory="../../Hardware/vacuumValve" />
+					<Add directory="../../Hardware/camera" />
+					<Add directory="../../Hardware/beamPositionMonitor" />
+					<Add directory="../../Hardware/invertedMagnetronGauge" />
+					<Add directory="../../Hardware/shutter" />
+					<Add directory="../../Hardware/pilaser" />
 				</Compiler>
 				<Linker>
 					<Add option="/DEBUG" />
@@ -27,11 +41,11 @@
 					<Add library="user32" />
 				</Linker>
 				<ExtraCommands>
-					<Add after='mt.exe /nologo /manifest &quot;bin\Debug\magnetPYD.dll.manifest&quot; /outputresource:&quot;../../../binbin\Debug\magnetPYD.dll&quot;;2' />
+					<Add after='cmd /c copy /y &quot;$(PROJECT_DIR)$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).dll&quot; &quot;$(PROJECT_DIR)$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).pyd&quot;' />
 				</ExtraCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="\\fed.cclrc.ac.uk\org\NLab\ASTeC\Projects\VELA\Software\VELA_CLARA_PYDs\bin\stage\VELA_CLARA_MagnetControl" prefix_auto="1" extension_auto="1" />
+				<Option output="\\fed.cclrc.ac.uk\org\NLab\ASTeC\Projects\VELA\Software\VELA_CLARA_PYDs\bin\stage\CLARA_Magnet_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
@@ -47,29 +61,28 @@
 					<Add directory="include" />
 					<Add directory="../../Hardware" />
 					<Add directory="../../Utilities" />
-					<Add directory="../../Config" />
 					<Add directory="../../Structs" />
+					<Add directory="../../Config" />
 					<Add directory="../../Hardware/magnet" />
+					<Add directory="../../Hardware/screen" />
+					<Add directory="../../Hardware/scope" />
+					<Add directory="../../Hardware/gun_prot" />
+					<Add directory="../../Hardware/vacuumValve" />
 					<Add directory="../../Hardware/camera" />
 					<Add directory="../../Hardware/beamPositionMonitor" />
-					<Add directory="../../Hardware/RFGun" />
-					<Add directory="../../Hardware/scope" />
-					<Add directory="../../Hardware/screen" />
-					<Add directory="../../Hardware/shutter" />
-					<Add directory="../../Hardware/vacuumValve" />
 					<Add directory="../../Hardware/invertedMagnetronGauge" />
+					<Add directory="../../Hardware/shutter" />
+					<Add directory="../../Hardware/pilaser" />
 				</Compiler>
 				<Linker>
 					<Add option="/INCREMENTAL:NO" />
 					<Add library="user32" />
-					<Add library="C:/boost/boost_1_55_0/stage/lib/libboost_python-vc120-mt-1_55.lib" />
 				</Linker>
 				<ExtraCommands>
 					<Add after='cmd /c copy /y &quot;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).dll&quot; &quot;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).pyd&quot;' />
 				</ExtraCommands>
 			</Target>
 		</Build>
-		<Unit filename="../../Hardware/controller.cpp" />
 		<Unit filename="../../Hardware/controller.h" />
 		<Unit filename="../../Hardware/interface.cpp" />
 		<Unit filename="../../Hardware/interface.h" />
