Adding first bits of Camera Controller

--- a/Config/velaCamera.config
+++ b/Config/velaCamera.config
@@ -15,33 +15,28 @@ PV_COMMANDS_START;              These are Pvs that are needed to send commands, 
 
 #pv_suffix must come first before other paramaters to be added to the struct.
 
-PV_SUFFIX_START = Start;
-PV_CHTYPE       = DBR_ENUM;
+PV_SUFFIX_START 		= Start;
+PV_CHTYPE       		= DBR_ENUM;
 
-PV_SUFFIX_STOP = Stop;
-PV_CHTYPE      = DBR_ENUM;
+PV_SUFFIX_STOP 			= Stop;
+PV_CHTYPE      			= DBR_ENUM;
 
-PV_SUFFIX_GAIN = GainRaw;
-PV_CHTYPE      = DBR_LONG;
+PV_SUFFIX_DATA			= ArrayData;
+PV_CHTYPE      			= DBR_TIME_LONG;
+PV_MASK        			= DBE_VALUE;
 
-
-PV_SUFFIX_BLACK = BlackLevelRaw;
-PV_CHTYPE             = DBR_LONG;
-
-PV_SUFFIX_DATA = ArrayData;
-PV_COUNT       = 1447680;
-PV_CHTYPE      = DBR_TIME_LONG;
-PV_MASK        = DBE_VALUE;
-
+PV_SUFFIX_BKGRND_DATA	= BackgroundArrayData;
+PV_CHTYPE      			= DBR_TIME_LONG;
+PV_MASK        			= DBE_VALUE;
 
 PV_MONITORS_START;  These are the PVs that will be continuously monitored ! ( so NOT camera data )
 
-PV_SUFFIX_GAIN_RBV = GainRaw_RBV;
+PV_SUFFIX_X 		= X;
 PV_COUNT           = 1;
 PV_CHTYPE          = DBR_LONG;
 PV_MASK            = DBE_VALUE;
 
-PV_SUFFIX_BLACK_RBV = BlackLevelRaw_RBV;
+PV_SUFFIX_Y 		= Y;
 PV_COUNT            = 1;
 PV_CHTYPE           = DBR_LONG;
 PV_MASK             = DBE_VALUE;
@@ -59,15 +54,24 @@ NUMBER_OF_ILOCKS  = 0;  If the number of interlocks changes between objects, the
 NUMBER_OF_PIXELS_X = 1392;
 NUMBER_OF_PIXELS_Y = 1040;
 
-NAME    = CAM01;
+
+####TIM's VERSION#####
+NAME    = VC;
 PV_ROOT = VM-EBT-INJ-DIA-CAM-01:CAM:;
-SCREEN  = VC;
-X0   = 0;
-Y0   = 0;
-XRAD = 0;
-YRAD = 0;
+SCREEN_PV  = VC;
+this is the center of the beam and can be calibrated by when commissioning
+and with the radial mask values (might need these here or lower down)
+X_CENTER = 0;
+Y_CENTER = 0;
+X_RAD = 0;
+Y_RAD = 0;
+ratio values to convert pixel value to mm
 X_PIX_2_MM = 0.0;
 Y_PIX_2_MM = 0.0;
+BIT_DEPTH = 16;
+IMAGE_WIDTH = 2560;
+IMAGE_HEIGHT = 2160;
+
 
 
 NAME    = CAM02;
