Added max and min
Also fixed linac 1 solenoid positions, and a typo in S02-VCOR1

--- a/Config/claraPH1Magnets.config
+++ b/Config/claraPH1Magnets.config
@@ -90,7 +90,7 @@ MAG_SET_MAX_WAIT_TIME = 45;
 MAGNET_BRANCH = LRG-BSOL; This is used to signify that the SOL & BSOL are linked
 
 NAME = L01-SOL1;
-POSITION = 0.281;
+POSITION = 1.64; estimated from schematic
 MANUFACTURER = "Efremov Institute";
 SERIAL_NUMBER = 08;
 PV_ROOT = CLA-L01-MAG-SOL-01:;
@@ -102,9 +102,11 @@ RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power 
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 10.0,   -10.0,  5.0,   -5.0,   2.0,  -2.0,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
+MAG_MIN_I = -200;
+MAG_MAX_I = 200;
 
 NAME = L01-SOL2;
-POSITION = 0.587;
+POSITION = 2.70; estimated from schematic
 MANUFACTURER = "Efremov Institute";
 SERIAL_NUMBER = 09;
 PV_ROOT = CLA-L01-MAG-SOL-02:;
@@ -116,6 +118,8 @@ RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power 
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 10.0,   -10.0,  5.0,   -5.0,   2.0,  -2.0,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
+MAG_MIN_I = -200;
+MAG_MAX_I = 200;
 
 
 //quads
@@ -133,6 +137,8 @@ RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power 
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 9.9,   -9.9,  5.0,   -5.0,   2.0,  -2.0,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
+MAG_MIN_I = -54;
+MAG_MAX_I = 54;
 
 NAME = S02-QUAD2;
 PV_ROOT = CLA-S02-MAG-QUAD-02:;
@@ -147,6 +153,8 @@ RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power 
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 9.9,   -9.9,  5.0,   -5.0,   2.0,  -2.0,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
+MAG_MIN_I = -54;
+MAG_MAX_I = 54;
 
 NAME = S02-QUAD3;
 PV_ROOT = CLA-S02-MAG-QUAD-03:;
@@ -161,6 +169,8 @@ RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power 
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 9.9,   -9.9,  5.0,   -5.0,   2.0,  -2.0,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
+MAG_MIN_I = -54;
+MAG_MAX_I = 54;
 
 NAME = S02-QUAD4;
 PV_ROOT = CLA-S02-MAG-QUAD-04:;
@@ -175,6 +185,8 @@ RI_TOLERANCE = 0.1;
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 9.9,   -9.9,  5.0,   -5.0,   2.0,  -2.0,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
+MAG_MIN_I = -54;
+MAG_MAX_I = 54;
 
 NAME = S02-QUAD5;
 PV_ROOT = CLA-S02-MAG-QUAD-05:;
@@ -189,6 +201,8 @@ RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power 
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 9.9,   -9.9,  5.0,   -5.0,   2.0,  -2.0,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
+MAG_MIN_I = -54;
+MAG_MAX_I = 54;
 
 
 NAME = C2V-QUAD1;
@@ -204,6 +218,8 @@ RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power 
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 9.9,   -9.9,  5.0,   -5.0,   2.0,  -2.0,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
+MAG_MIN_I = -200;
+MAG_MAX_I = 200;
 
 NAME = C2V-QUAD2;
 PV_ROOT = CLA-C2V-MAG-QUAD-02:;
@@ -218,6 +234,8 @@ RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power 
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 9.9,   -9.9,  5.0,   -5.0,   2.0,  -2.0,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
+MAG_MIN_I = -200;
+MAG_MAX_I = 200;
 
 NAME = C2V-QUAD3;
 PV_ROOT = CLA-C2V-MAG-QUAD-03:;
@@ -232,6 +250,8 @@ RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power 
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 9.9,   -9.9,  5.0,   -5.0,   2.0,  -2.0,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
+MAG_MIN_I = -200;
+MAG_MAX_I = 200;
 
 
 // hv_corrs
@@ -249,6 +269,8 @@ RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power 
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 5.0,   -5.0,  4.0,   -4.0,   2.50,  -2.50,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
+MAG_MIN_I = -5;
+MAG_MAX_I = 5;
 
 NAME = S01-VCOR1;
 PV_ROOT = CLA-S01-MAG-VCOR-01:;
@@ -263,6 +285,8 @@ RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power 
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 5.0,   -5.0,  4.0,   -4.0,   2.50,  -2.50,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
+MAG_MIN_I = -5;
+MAG_MAX_I = 5;
 
 NAME = S01-HCOR2;
 PV_ROOT = CLA-S01-MAG-HCOR-02:;
@@ -277,6 +301,8 @@ RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power 
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 5.0,   -5.0,  4.0,   -4.0,   2.50,  -2.50,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
+MAG_MIN_I = -5;
+MAG_MAX_I = 5;
 
 NAME = S01-VCOR2;
 PV_ROOT = CLA-S01-MAG-VCOR-02:;
@@ -291,6 +317,8 @@ RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power 
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 5.0,   -5.0,  4.0,   -4.0,   2.50,  -2.50,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
+MAG_MIN_I = -5;
+MAG_MAX_I = 5;
 
 NAME = S02-HCOR1;
 PV_ROOT = CLA-S02-MAG-HCOR-01:;
@@ -305,8 +333,10 @@ RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power 
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 5.0,   -5.0,  4.0,   -4.0,   2.50,  -2.50,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
+MAG_MIN_I = -10;
+MAG_MAX_I = 10;
 
-NAME = S01-VCOR1;
+NAME = S02-VCOR1;
 PV_ROOT = CLA-S02-MAG-VCOR-01:;
 MAG_TYPE = VCOR;
 POSITION = 3.448080313;
@@ -319,6 +349,8 @@ RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power 
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 5.0,   -5.0,  4.0,   -4.0,   2.50,  -2.50,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
+MAG_MIN_I = -10;
+MAG_MAX_I = 10;
 
 NAME = S02-HCOR2;
 PV_ROOT = CLA-S02-MAG-HCOR-02:;
@@ -333,6 +365,8 @@ RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power 
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 5.0,   -5.0,  4.0,   -4.0,   2.50,  -2.50,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
+MAG_MIN_I = -10;
+MAG_MAX_I = 10;
 
 NAME = S02-VCOR2;
 PV_ROOT = CLA-S02-MAG-VCOR-02:;
@@ -347,6 +381,8 @@ RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power 
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 5.0,   -5.0,  4.0,   -4.0,   2.50,  -2.50,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
+MAG_MIN_I = -10;
+MAG_MAX_I = 10;
 
 
 NAME = C2V-HCOR1;
@@ -362,6 +398,8 @@ RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power 
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 5.0,   -5.0,  4.0,   -4.0,   2.50,  -2.50,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
+MAG_MIN_I = -10;
+MAG_MAX_I = 10;
 
 NAME = C2V-VCOR1;
 PV_ROOT = CLA-C2V-MAG-VCOR-01:;
@@ -376,6 +414,8 @@ RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power 
 NUM_DEGAUSS_STEPS = 9;
 DEGAUSS_VALUES = 5.0,   -5.0,  4.0,   -4.0,   2.50,  -2.50,  1.0,  -1.0,  0.0;
 MAG_SET_MAX_WAIT_TIME = 45;
+MAG_MIN_I = -10;
+MAG_MAX_I = 10;
 
 
  ____ ____ ____ _____ __   ____ ___
@@ -398,6 +438,8 @@ NUM_DEGAUSS_STEPS = 11; ???
 DEGAUSS_VALUES  = 9.98,  -9.98,  6.0,   -6.0,   4.0,  -4.0,  2.0,  -2.0,  1.0,  -1.0,  0.0; ???
 DEGAUSS_TOLERANCE  = 0.1; ???
 MAG_SET_MAX_WAIT_TIME = 45; ???C1-
+MAG_MIN_I = -130;
+MAG_MAX_I = 130;
 
 NAME = DIP02;
 POSITION = 7.972725978;
@@ -414,5 +456,7 @@ NUM_DEGAUSS_STEPS = 11; ???
 DEGAUSS_VALUES  = 9.98,  -9.98,  6.0,   -6.0,   4.0,  -4.0,  2.0,  -2.0,  1.0,  -1.0,  0.0; ???
 DEGAUSS_TOLERANCE  = 0.1; ???
 MAG_SET_MAX_WAIT_TIME = 45; ???
+MAG_MIN_I = -200;
+MAG_MAX_I = 200;
 
 END_OF_DATA;
